# agdb_server/src/action/remove_user_session.rs
@@ -9,14 +9,12 @@ use serde::Serialize;
 
 #[derive(Clone, Serialize, Deserialize, DbSerialize)]
 pub(crate) struct RemoveUserSession {
-    pub(crate) user: String,
-    pub(crate) session: i64,
+    pub(crate) session: String,
 }
 
 impl Action for RemoveUserSession {
     async fn exec(self, db: ServerDb, _db_pool: DbPool) -> ServerResult<ClusterActionResult> {
-        let user_id = db.user_id(&self.user).await?;
-        db.remove_session(user_id, self.session).await?;
+        db.remove_session(self.session).await?;
 
         Ok(ClusterActionResult::None)
     }
