# agdb_server/src/action/save_user_token.rs
@@ -12,12 +12,14 @@ pub(crate) struct SaveUserToken {
     pub(crate) user: String,
     pub(crate) new_token: String,
     pub(crate) agent: String,
+    pub(crate) session: String,
 }
 
 impl Action for SaveUserToken {
     async fn exec(self, db: ServerDb, _db_pool: DbPool) -> ServerResult<ClusterActionResult> {
         let user_id = db.user_id(&self.user).await?;
-        db.save_token(user_id, &self.new_token, &self.agent).await?;
+        db.save_token(user_id, &self.new_token, self.agent, self.session)
+            .await?;
 
         Ok(ClusterActionResult::None)
     }
