# agdb_server/src/api.rs
@@ -33,7 +33,6 @@ use utoipa::openapi::security::SecurityScheme;
         routes::admin::user::add,
         routes::admin::user::list,
         routes::admin::user::logout,
-        routes::admin::user::logout_session,
         routes::admin::user::logout_all,
         routes::admin::user::delete,
         routes::admin::set_log_level,
@@ -41,8 +40,6 @@ use utoipa::openapi::security::SecurityScheme;
         routes::admin::status,
         routes::user::login,
         routes::user::logout,
-        routes::user::logout_session,
-        routes::user::logout_all,
         routes::user::change_password,
         routes::user::status,
         routes::db::add,
@@ -64,12 +61,8 @@ use utoipa::openapi::security::SecurityScheme;
         routes::db::user::remove,
         routes::cluster::login,
         routes::cluster::logout,
-        routes::cluster::user_logout_session,
-        routes::cluster::user_logout_all,
         routes::cluster::status,
         routes::cluster::admin_logout,
-        routes::cluster::admin_logout_session,
-        routes::cluster::admin_logout_all,
     ),
     components(schemas(
         routes::db::DbTypeParam,
@@ -79,7 +72,7 @@ use utoipa::openapi::security::SecurityScheme;
         routes::db::ServerDatabaseResource,
         routes::db::user::DbUserRoleParam,
         routes::admin::SetLogLevelRequest,
-        routes::user::LogoutAllQuery,
+        routes::user::LogoutQuery,
         agdb_api::AdminStatus,
         agdb_api::DbAudit,
         agdb_api::DbKind,
