# agdb_server/src/app.rs
@@ -66,10 +66,6 @@ pub(crate) fn app(
             routing::post(routes::admin::user::logout),
         )
         .route(
-            "/admin/user/{username}/logout/{session}",
-            routing::delete(routes::admin::user::logout_session),
-        )
-        .route(
             "/admin/user/{username}/add",
             routing::post(routes::admin::user::add),
         )
@@ -197,20 +193,8 @@ pub(crate) fn app(
             routing::post(routes::cluster::logout),
         )
         .route(
-            "/cluster/user/logout/{session}",
-            routing::delete(routes::cluster::user_logout_session),
-        )
-        .route(
-            "/cluster/user/logout_all",
-            routing::post(routes::cluster::user_logout_all),
-        )
-        .route(
             "/cluster/admin/user/{username}/logout",
             routing::post(routes::cluster::admin_logout),
-        )
-        .route(
-            "/cluster/admin/user/{username}/logout/{session}",
-            routing::delete(routes::cluster::admin_logout_session),
         )
         .route(
             "/cluster/admin/user/logout_all",
@@ -219,11 +203,6 @@ pub(crate) fn app(
         .route("/cluster/status", routing::get(routes::cluster::status))
         .route("/user/login", routing::post(routes::user::login))
         .route("/user/logout", routing::post(routes::user::logout))
-        .route(
-            "/user/logout/{session}",
-            routing::delete(routes::user::logout_session),
-        )
-        .route("/user/logout_all", routing::post(routes::user::logout_all))
         .route(
             "/user/change_password",
             routing::put(routes::user::change_password),
